--- a/css/_list.scss
+++ b/css/_list.scss
@@ -20,9 +20,11 @@
 //	<li class="wfm-block wfm-list-item material-depth-1">
 //		List Item 2
 //		<div class="wfm-leave-behind">
+//			<span>
 //				<i class="mdi mdi-content-copy"></i>
 //				<i class="mdi mdi-pencil"></i>
 //				<i class="mdi mdi-delete"></i>
+//			</span>	
 //		</div>
 //	</li>
 //	<li class="wfm-block wfm-list-item material-depth-1">
@@ -65,20 +67,24 @@
 	float: right;
 	overflow: hidden;
 	height: 45px;
-	margin-top:-12px;
-	background-color:$gray012;
+	margin-top: -12px;
+	background-color: $gray012;
 	transition: $trasnition-timing;
 	-webkit-box-shadow: inset 0 2px 5px 0 rgba(0, 0, 0, 0.16);
 	-moz-box-shadow: inset 0 2px 5px 0 rgba(0, 0, 0, 0.16);
 	box-shadow: inset 0 2px 5px 0 rgba(0, 0, 0, 0.16);
-	padding-top:10px;
+	padding-top: 10px;
+	
+	span{
+		white-space:nowrap;
+	}
 	
 	i{	
-		positon:justify;
-		padding-left:5px;
-		padding-top:2px;
-		font-size:18px;
-		margin:0 5px;
+		positon: justify;
+		padding-left: 5px;
+		padding-top: 2px;
+		font-size: 18px;
+		margin: 0 5px;
 	}
 	
 	p{
