--- a/css/_navbar.scss
+++ b/css/_navbar.scss
@@ -36,14 +36,14 @@
 	border: none;
 
 	a{
-		color: white !important;
+		color: $white !important;
 		text-decoration:none;
 		display:inline-block;
 		font-size: 14px;
 	}
 	
 	.brand{
-		color: white !important;
+		color: $white !important;
 	}
 	
 	.content {
