--- a/css/_variables.scss
+++ b/css/_variables.scss
@@ -48,6 +48,8 @@ $gray026: rgba(0,0,0,0.26);
 $gray054: rgba(0,0,0,0.54);
 $gray087: rgba(0,0,0,0.87);
 $gray100: rgba(0,0,0,1);
+$white: #ffffff;
+
 $full-padding: 10px;
 $half-padding: 3px;
 $trasnition-timing: all 0.5s ease;
